# WHS_tool

./: .gitignore  README.md  artifacts.json  extract_llm.py  pyproject.toml  requirements.txt  setup_macos.sh  setup_wsl.sh
extract_llm/: cli.py
llm_forensics/: pyvenv.cfg
whs_tool/: cli.py
