[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whs-tool"
version = "0.1.0"
description = "LLM forensic artifact extractor (E01 images)"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.scripts]
whs-tool = "whs_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whs_tool*"]
exclude = ["E01*", "result*", "tests*", "test*", "build*", "dist*"]

# 패키지 내부 데이터 포함 — artifacts.json 등
[tool.setuptools.package-data]
whs_tool = ["artifacts.json", "data/*", "*.json"]
