[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whs-tool"
version = "0.1.0"
description = "LLM forensic artifact extractor (E01 images)"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.scripts]
whs-tool = "extract_llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["extract_llm*"]
exclude = ["E01*", "result*", "tests*", "test*", "build*", "dist*"]

# 패키지 내부 데이터 포함 — artifacts.json 등
[tool.setuptools.package-data]
extract_llm = ["artifacts.json", "data/*", "*.json"]
